# ROS_packages_pHossbach

ar_sys/: CMakeLists.txt  package.xml
ar_sys/camera_info/: camera_calibration_webcam.yaml
ar_sys/data/multi/: board_3markers_1.yml  boards.yml
ar_sys/data/single/: board.yml  board_122.yml  board_310.yml
ar_sys/data/viewer/: viewer_test.rviz
ar_sys/data/vrmagic/HandEyeCalib/: board0.yml  boards.yml
ar_sys/data/vrmagic/To_be_Print/: sideboard1.xcf  sideboard2.xcf  sideboard3.xcf  sideboard4.xcf
ar_sys/data/vrmagic/multi/: boards.yml  sideboard1.yml  sideboard1_center.yml  sideboard2.yml  sideboard2_center.yml  sideboard3.yml  sideboard3_center.yml  sideboard4.yml  sideboard4_center.yml
ar_sys/launch/: device2.launch  multi_boards_vrm.launch
ar_sys/src/: multi_boards.cpp  multi_boards_left.cpp  multi_boards_right.cpp
coop_localization/: CMakeLists.txt  package.xml
coop_localization/data/: apollon_setup.txt  apollon_setup_2016.txt  boreas_setup.txt  boreas_setup_2016.txt
coop_localization/data/results/0303 - VO falsch skaliert/: record_03-03-2016 12:19:22_c2c.txt  record_03-03-2016 12:19:22_fusion.txt  record_03-03-2016 12:19:22_true.txt  record_03-03-2016 12:19:22_vo.txt  record_03-03-2016 12:22:33_c2c.txt  record_03-03-2016 12:22:33_fusion.txt  record_03-03-2016 12:22:33_true.txt  record_03-03-2016 12:22:33_vo.txt  record_03-03-2016 12:24:56_c2c.txt  record_03-03-2016 12:24:56_fusion.txt  record_03-03-2016 12:24:56_true.txt  record_03-03-2016 12:24:56_vo.txt  record_03-03-2016 12:38:34_c2c.txt  record_03-03-2016 12:38:34_fusion.txt  record_03-03-2016 12:38:34_true.txt  record_03-03-2016 12:38:34_vo.txt
coop_localization/data/results/0304 - neue Tests/mit wand/: record_04-03-2016 11:26:44_c2c.txt  record_04-03-2016 11:26:44_fusion.txt  record_04-03-2016 11:26:44_true.txt  record_04-03-2016 11:26:44_vo.txt  record_04-03-2016 12:26:37_c2c.txt  record_04-03-2016 12:26:37_fusion.txt  record_04-03-2016 12:26:37_true.txt  record_04-03-2016 12:26:37_vo.txt
coop_localization/data/results/0304 - neue Tests/ohne wand/: record_04-03-2016 10:23:31_c2c.txt  record_04-03-2016 10:23:31_fusion.txt  record_04-03-2016 10:23:31_true.txt  record_04-03-2016 10:23:31_vo.txt
coop_localization/data/results/5xSetting1/: record_19-02-2016 12:57:11_c2c.txt  record_19-02-2016 12:57:12_libviso2.txt  record_19-02-2016 12:57:12_webcam2.txt  record_19-02-2016 13:02:10_c2c.txt  record_19-02-2016 13:02:10_libviso2.txt  record_19-02-2016 13:02:10_webcam2.txt  record_19-02-2016 13:08:10_c2c.txt  record_19-02-2016 13:08:10_libviso2.txt  record_19-02-2016 13:08:10_webcam2.txt  record_19-02-2016 13:10:46_c2c.txt  record_19-02-2016 13:10:46_libviso2.txt  record_19-02-2016 13:10:46_webcam2.txt  record_19-02-2016 13:13:30_c2c.txt  record_19-02-2016 13:13:30_libviso2.txt  record_19-02-2016 13:13:30_webcam2.txt
coop_localization/data/results/VO test/: record_23-02-2016 11:24:56_libviso2.txt  record_23-02-2016 11:24:56_webcam2.txt  record_23-02-2016 11:41:10_libviso2.txt  record_23-02-2016 11:41:10_webcam2.txt  record_23-02-2016 12:10:40_libviso2.txt  record_23-02-2016 12:10:40_webcam2.txt  record_23-02-2016 12:13:04_libviso2.txt  record_23-02-2016 12:13:04_webcam2.txt  record_23-02-2016 12:15:09_libviso2.txt  record_23-02-2016 12:15:09_webcam2.txt
coop_localization/data/results/februar/: record_19-02-2016 10:59:60_c2c.txt  record_19-02-2016 10:59:60_libviso2.txt  record_19-02-2016 10:59:60_webcam2.txt  record_19-02-2016 13:18:34_c2c.txt  record_19-02-2016 13:18:34_libviso2.txt  record_19-02-2016 13:18:34_webcam2.txt  record_19-02-2016 13:22:15_c2c.txt  record_19-02-2016 13:22:15_libviso2.txt  record_19-02-2016 13:22:15_webcam2.txt
coop_localization/data/results/gesichert/: record_webcam2_18-02-2016 13:01:06.txt  record_webcam2_18-02-2016 13:03:29.txt
coop_localization/data/results/march/: ex1_horizon_02.txt  ex1_straight_01.txt
coop_localization/data/results/tests/: first_circle.txt  first_straightLine.txt  second_straightLine.txt
coop_localization/include/: c2c_left_node.hpp  c2c_merge_node.hpp  c2c_right_node.hpp  coop_fusion_node.hpp  coop_fusion_node_damaged.hpp  follow_rotation_node.hpp  record_c2c_node.hpp  record_fusion_node.hpp  record_libviso2_node.hpp  record_webcam2_node.hpp
coop_localization/launch/: find_c2c.launch  record_all.launch
coop_localization/src/coop_c2c/: c2c_left.cpp  c2c_left_node.cpp  c2c_merge.cpp  c2c_merge_node.cpp  c2c_right.cpp  c2c_right_node.cpp
coop_localization/src/coop_follow/: follow_rotation.cpp  follow_rotation_node.cpp
coop_localization/src/coop_fusion/: coop_fusion.cpp  coop_fusion_node.cpp  coop_fusion_node_damaged.cpp
coop_localization/src/coop_record/: record_c2c.cpp  record_c2c_node.cpp  record_fusion.cpp  record_fusion_node.cpp  record_libviso2.cpp  record_libviso2_node.cpp  record_webcam2.cpp  record_webcam2_node.cpp
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/launch/: setup_both.launch
robot_setup_tf/src/: apollon_A.cpp  boreas_A.cpp
viso2/viso2_ros/launch/: demo.launch  demo.launch~
vrmagic_connector-master/calibrations/: vrmagic_left.yaml  vrmagic_left.yaml~  vrmagic_left_B.yaml  vrmagic_right.yaml  vrmagic_right.yaml~  vrmagic_right_B.yaml
vrmagic_connector-master/calibrations/old(2015)_calib_data/: vrmagic_left_A.yaml  vrmagic_left_B.yaml  vrmagic_right_B.yaml
vrmagic_connector-master/calibrations/old(2015)_calib_data/A_calibrationdata_20151119_0959/: left.ini  ost (copy).txt~  ost.txt~  right.ini  vrmagic_right.yaml
vrmagic_connector-master/calibrations/old(2015)_calib_data/B_calibrationdata_1/: cal_left.yaml  cal_left.yaml~  cal_right.yaml  cal_right.yaml~  ost.ini  ost.ini~
vrmagic_connector-master/calibrations/old(2015)_calib_data/B_calibrationdata_2/: ost.txt
vrmagic_connector-master/launch/: camera.launch  camera.launch~
